<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:text="Logo"
            android:textSize="80sp" />

        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ingrediscan"
            android:textColor="@color/green"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tagline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:text="@string/subHeader"
            android:textColor="@color/light_gray"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appName" />

        <EditText
            android:id="@+id/enterUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/rounded_corner_background"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="text"
            android:paddingLeft="15dp"
            android:paddingBottom="30dp" />

        <EditText
            android:id="@+id/enterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/rounded_corner_background"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:paddingBottom="30dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonLogin"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:maxWidth="200dp"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold|italic"
            app:backgroundTint="@color/green"
            app:cornerRadius="30dp" />

        <TextView
            android:id="@+id/noAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/no_account" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSignup"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="30dp"
            android:text="@string/signup"
            android:textColor="@color/green"
            android:textSize="24sp"
            android:textStyle="bold|italic"
            app:backgroundTint="@android:color/white"
            app:strokeColor="@color/green"
            app:strokeWidth="2dp"
            app:cornerRadius="30dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>