<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/appName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingrediscan"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="#4CAF50"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/tagline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subHeader"
                android:textSize="16sp"
                android:textColor="#808080"
                android:layout_gravity="center"
                app:layout_constraintTop_toBottomOf="@id/appName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="4dp" />

            <TextView
                android:id="@+id/yourDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Your Day"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#000000"
                app:layout_constraintTop_toBottomOf="@id/tagline"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/caloriesContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_corner_background"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/yourDay">

                <TextView
                    android:id="@+id/caloriesTracked"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(viewModel.caloriesTracked)}"
                    android:textColor="#F17615"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/caloriesLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/calories_tracked_today"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/caloriesTracked" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:layout_marginTop="8dp"
                    android:progress="50"
                    android:progressDrawable="@drawable/progress_bar_states"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/caloriesLabel" />

                <!-- This is the container inside the CaloriesContainer that holds Today's Food & Tutorial containers-->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/sideBySideContainer"
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    app:layout_constraintTop_toBottomOf="@id/progressBar"
                    android:layout_gravity="center"
                    tools:layout_editor_absoluteX="-13dp"
                    tools:ignore="MissingConstraints">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/leftContainer"
                        android:layout_width="190dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_corner_background"
                        tools:layout_editor_absoluteX="16dp"
                        tools:layout_editor_absoluteY="9dp">

                        <!-- Elements of the Today's Food Container -->
                        <TextView
                            android:id="@+id/todaysFoodLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#5BC07E"
                            android:gravity="center"
                            android:text="@string/latest_food"
                            android:textColor="#FFFFFF"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.505"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/foodItem1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:text="@string/food_item_1_200_cal"
                            android:textColor="#000000"
                            android:textSize="16sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/todaysFoodLabel" />

                        <TextView
                            android:id="@+id/foodItem2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:text="@string/food_item_2_300_cal"
                            android:textColor="#000000"
                            android:textSize="16sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/foodItem1" />

                        <TextView
                            android:id="@+id/foodItem3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:text="@string/food_item_3_223_cal"
                            android:textColor="#000000"
                            android:textSize="16sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/foodItem2" />

                        <TextView
                            android:id="@+id/foodItem4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:text="@string/food_item_4_400_cal"
                            android:textColor="#000000"
                            android:textSize="16sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/foodItem3" />

                        <Button
                            android:id="@+id/seeAll"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:layout_marginTop="5dp"
                            android:text="@string/SeeAll_underlined"
                            android:textColor="#FFFFFF"
                            android:textSize="10sp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/foodItem4"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/rightContainer"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:background="@drawable/rounded_background_tutorial"
                        android:color="#4b8661"
                        android:icon="@drawable/outline_lightbulb_24"

                        app:layout_constraintStart_toEndOf="@+id/leftContainer"
                        app:layout_constraintTop_toTopOf="@id/leftContainer"
                        app:layout_constraintBottom_toBottomOf="@id/leftContainer"
                        tools:layout_editor_absoluteY="10dp">

                        <!-- Elements of the Tutorial Container -->
                        <TextView
                            android:id="@+id/ingredAILabel2"
                            android:layout_width="95dp"
                            android:layout_height="143dp"
                            android:layout_marginTop="85dp"
                            android:background="@drawable/half_circle_background"
                            android:gravity="center|center_vertical"
                            android:text="@string/LearnMore_underlined"
                            android:textColor="#FFFFFF"
                            android:textSize="13sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/ingredAILabel"
                            android:layout_width="117dp"
                            android:layout_height="27dp"
                            android:layout_marginTop="1dp"
                            android:gravity="center"
                            android:text="@string/tutorial"
                            android:textColor="#FFFFFF"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.511"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/centerIcon"
                            android:layout_width="50dp"
                            android:layout_height="51dp"
                            android:src="@drawable/outline_lightbulb_24"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <!-- This is the end of the side by side container -->
                </androidx.constraintlayout.widget.ConstraintLayout>

                <!-- This is the end of the CaloriesTracked container -->
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/BreakFast_Container"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal"
                android:background="@drawable/rounded_corner_background"
                android:layout_marginTop = "12dp">

                <TextView
                    android:id="@+id/Breakfast_Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:text="@string/log_a_meal_for_breakfast"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/Breakfast_Add_Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:text="@string/Plus_Icon"/>

            </LinearLayout>

            <!--These are the 4 buttons to log a meal for-->
            <LinearLayout
                android:id="@+id/Lunch_Container"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal"
                android:background="@drawable/rounded_corner_background"
                android:layout_marginTop = "12dp">

                <TextView
                    android:id="@+id/Lunch_Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:text="@string/log_a_meal_for_lunch"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/Lunch_Add_Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="126dp"
                    android:text="@string/PlusIcon"/>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/Dinner_Container"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal"
                android:background="@drawable/rounded_corner_background"
                android:layout_marginTop = "12dp">

                <TextView
                    android:id="@+id/Dinner_Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:text="@string/log_a_meal_for_dinner"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/Dinner_Add_Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="122dp"
                    android:text="@string/PlusIcon"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/Snack_Container"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal"
                android:background="@drawable/rounded_corner_background"
                android:layout_marginTop = "12dp"
                android:layout_marginBottom="50dp">

                <TextView
                    android:id="@+id/Snack_Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:text="@string/log_a_meal_for_snack"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/Snack_Add_Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="122dp"
                    android:text="@string/PlusIcon"/>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
